投票时间修改

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
 	"type": "project",
 	"require": {
 		"laravel/framework": "4.2.*",
-		"gregwar/captcha": "1.*"		
+		"gregwar/captcha": "1.*",
+		"nesbot/carbon": "~1.14"		
 	},
 	"require-dev":{
 		"way/generators": "~2.0"
